Started refactoring the project for better codebase making it better manageable